modified:   wiki/README.md 	renamed:    wiki/salt/intro.wiki -> wiki/Salt.wiki 	renamed:    wiki/shell_command_line_shortcut.md -> wiki/Shell.wiki 	renamed:    wiki/sublime/package_console.wiki -> wiki/Sublime.wiki 	new file:   wiki/html_css/index.wiki 	modified:   wiki/index.wiki 	new file:   wiki/javascript/index.wiki 	modified:   wiki/javascript/mock.wiki 	new file:   wiki/javascript/pretty.js.wiki 	new file:   wiki/lua/index.wiki 	new file:   wiki/nginx/index.wiki 	new file:   wiki/ngx_lua/index.wiki 	renamed:    wiki/perl1line.txt -> wiki/perl/perl1line.txt 	new file:   wiki/python/index.wiki 	deleted:    wiki/salt/install.wiki 	new file:   wiki/scrum tools.wiki 	deleted:    wiki/scrum_tools.md 	new file:   wiki/sshfs.wiki 	modified:   wiki/templates/default.html 	new file:   wiki/varnish/index.wiki 	new file:   wiki/vim/index.wiki 	deleted:    wiki/vim/mac_vim.wiki 	deleted:    wiki/vim/script.wiki 	renamed:    wiki/virtualbox nat -> wiki/virtualbox/virtualbox nat 	modified:   "wiki/\345\267\245\347\250\213\345\270\210\347\232\204\351\235\236\346\212\200\346\234\257\347\264\240\345\205\273.wiki" 	new file:   "wiki/\350\277\220\347\273\264\345\267\245\347\250\213\345\270\210\347\232\204\345\267\245\345\205\267\351\223\276.wiki" 	renamed:    wiki_html/salt/intro.html -> wiki_html/Salt.html 	new file:   wiki_html/Shell.html 	renamed:    wiki_html/sublime/package_console.html -> wiki_html/Sublime.html 	modified:   wiki_html/css/bootstrap.min.css 	new file:   wiki_html/css/prettify.css 	new file:   wiki_html/html_css/index.html 	new file:   wiki_html/img/glyphicons-halflings.png 	modified:   wiki_html/index.html 	new file:   wiki_html/javascript/index.html 	modified:   wiki_html/javascript/mock.html 	new file:   wiki_html/javascript/pretty.js.html 	modified:   wiki_html/javascript/trainningByWenson.html 	new file:   wiki_html/js/prettify.js 	new file:   wiki_html/lua/index.html 	renamed:    wiki_html/salt/install.html -> wiki_html/nginx/index.html 	new file:   wiki

--- a/wiki/Shell.wiki
+++ b/wiki/Shell.wiki
@@ -1,6 +1,4 @@
-# shell命令行快捷键
-
-## 常用的快捷键：
+= bash命令行快捷键 =
 - Ctrl + d       删除一个字符，相当于通常的Delete键（命令行若无任何字符，则相当于exit；处理多行标准输入时也表示eof）
 - Alt + d      删除从光标位置到当前所处单词的末尾
 - Ctrl + h       退格删除一个字符，相当于通常的Backspace键
