--- a/wiki/Salt.wiki
+++ b/wiki/Salt.wiki
@@ -1,4 +1,6 @@
-= 简介 =
+%toc
+
+=== 简介 ===
 
 * Salt
     * 是一个配置管理系统，能够将远程节点维持在指定状态。
@@ -26,3 +28,29 @@
 * 快速、灵活、并行化
 
 * 开源（Apache2.0 licence）
+
+=== 安装 ===
+The latest Salt Stack packages are available in a PPA. The steps below demonstrate how to add the PPA and install the Salt Stack packages.
+
+{{{
+sudo apt-get install python-software-properties
+sudo add-apt-repository -y ppa:saltstack/salt
+}}}
+
+Once the repository has been configured you’ll need to refresh your package cache.
+
+`sudo apt-get update`
+
+Now you should be ready to install the Salt Stack packages. Salt Stack is broken up into three different packages: salt-master, salt-minion and salt-syndic.
+
+Salt Master
+
+`sudo apt-get install salt-master`
+
+Salt Minion
+
+`sudo apt-get install salt-minion`
+
+Salt Syndic
+
+`sudo apt-get install salt-syndic`
