--- a/wiki/Sublime.wiki
+++ b/wiki/Sublime.wiki
@@ -1,3 +1,5 @@
-= install package manager =
+%toc
+
+= Package manager =
 # ctrl+\`
 # import urllib2,os;pf='Package Control.sublime-package';ipp=sublime.installed_packages_path();os.makedirs(ipp) if not os.path.exists(ipp) else None;open(os.path.join(ipp,pf),'wb').write(urllib2.urlopen('http://sublime.wbond.net/'+pf.replace(' ','%20')).read())
